/*
 * Copyright 2020 Blockchain Technology Partners.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */
syntax = "proto3";

option java_multiple_files = true;

package org.hyperledger.besu.ethereum.mainnet.precompiles.daml.protobuf;

message DamlOperation {
  oneof payload {
    DamlTransaction transaction = 1;
    DamlParty allocateParty = 2;
  };
  string submittingParticipant = 3;
}

/**
 * Daml Parties will be stored under the address hash(hint).
 * Duplicate parties will be rejected.
 * Display names may be updated.
 */
message DamlParty {
  string hint = 1;
  string displayName = 2;
}

message DamlTransaction {
  bytes logEntryId = 1;
  bytes submission = 2;
}

message DamlLogEntryIndex { repeated string addresses = 1; }

message ConfigurationMap { repeated ConfigurationEntry entries = 1; }

message ConfigurationEntry {
  string key = 1;
  bytes value = 2;
}
